--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.details{
+  height:450px;
+  width: 450px;
+  border-radius: 12px;
+  display: inline-block;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-items: center;
+  margin-top: 50px;
+  padding: 15px;
+  margin-left: 500px ;
+  box-shadow: 2px  2px 4px 4px #133E87;
+}
+.mainbody{
+  background-image: url("bg2.jpg");
+  background-size: cover;
+
+
+}
+.mb-3{
+  margin-top: 20px;
+}
+.form-label{
+  width: 400px;
+}
+.btnlog{
+  border:2px solid #133E87;
   color: white;
+  border-radius:14%;
+  height:45px;
+  width:100px;
+  display:flex;
+  justify-content: center;
+  background-color: #133E87;
+  margin-top: 30px;
+  padding-top: 9px;
+  margin-left: 150px;
+}
+p{
+  margin-top: 20px;
+}
+.LoginBtn{
+  color: #133E87;
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+.btnsign{
+  border:2px solid #133E87;
+  color: white;
+  border-radius:14%;
+  height:45px;
+  width:100px;
+  display:flex;
+  justify-content: center;
+  background-color: #133E87;
+  margin-top: 30px;
+  padding-top: 9px;
+  margin-left: 150px;
 }
+.mainbody{
+  height: 600px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.btnOne{
+  border:2px solid white;
+  color: white;
+  border-radius:5px;
+  height:40px;
+  width:100px;
+  display:flex;
+  justify-content: center;
+  background-color: #133E87;
+  padding-top: 5px;
+  margin-left: 70px;
+}
+.btnOne:hover{
+background-color: white;
+color: #133E87;
+}
+.exclusive{
+  height: 400px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 22px;
+  background-color: #BAD1CD;
+  box-shadow: 2px 2px 2px 2px #BAD1CD;
+  margin-bottom: 50px;
+}
+.box1{
+  height: 350px;
+  width: 400px;
+  background-image: url("newss.webp");
+  background-size: cover;
+  border-radius: 10px;
+
+}
+.box2{
+  height: 350px;
+  width: 500px;
+  display: inline-block;
+  padding-top: 80px;
+
+}
+#mine:active{
+  background-color: green;
+
 }
